# dx-magnet

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: styles.css
examples/: busy_grid.rs  draggable.rs
src/: main.rs
src/components/: button.rs  dom_utilities.rs  draggable.rs  layout.rs  mod.rs
src/components/draggable/: components.rs  controllers.rs  drag_error.rs  drag_transition.rs  dragarea_state.rs  draggable_render_data.rs  draggable_state.rs  geometry.rs  mod.rs  state_utils.rs  targets.rs
src/components/styles/: mod.rs
