[package]
name = "gridline"
version = "0.1.0"
authors = ["bcorey <benjaminmcorey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
uuid = { version = "1.8.0", features = ["v4", "js"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Element",
    "Window",
    "Document",
    "DomRect"
]
