[package]
name = "dx-magnet"
version = "0.1.0"
authors = ["bcorey <benjaminmcorey@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]

dioxus = { version = "0.5.6", features = ["web"] }
#dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "signals"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
uuid = { version = "1.8.0", features = ["v4", "js"] }
#dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk", features = ["window_size"]}
dioxus-sdk = { path = "../sdk/sdk", features = ["window_size"]}
web-time = "1.1.0"
dx-flipbook = { path = "../dx-flipbook" }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Element",
    "Window",
    "Document",
    "DomRect"
]
